remove fixed width for navbar on small screens

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -437,7 +437,6 @@ footer {
         align-items: center;
         padding: 1em 0.15em;
         color: $dark-red;
-        width: 95px;
         font-size: 1.15em;
         background: none;
         border: none;
